--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-manim
-jupyterlab
-jupyterlab_latex
+manim==0.18.0
+jupyterlab==4.0.5
+jupyterlab_latex==4.1.1
+notebook==7.0.6
+numpy>=1.20.0
+matplotlib>=3.4.0
+pillow>=8.0.0
