--- a/.binder/Dockerfile
+++ b/.binder/Dockerfile
@@ -1,14 +1,19 @@
 FROM manimcommunity/manim:stable
 
-# Become root to install Jupyter pieces
+# Run as root to install extra pieces
 USER root
 
-# Ensure user-local scripts are on PATH (pip installs to /manim/.local/bin in this image)
+# Ensure pip-installed scripts are on PATH
 ENV PATH="/manim/.local/bin:${PATH}"
 
 # Minimal Jupyter stack for Binder
 RUN python3 -m pip install --no-cache-dir notebook jupyterlab ipywidgets
 
-# Switch back to the default image user ("manim") and set a sane workdir
+# Switch back to the default user from the base image
 USER manim
+
+# Workdir left as provided by Binder (do NOT override with /home/jovyan)
 WORKDIR /manim
+
+# Do NOT set ENTRYPOINT or CMD; Binder injects its own commands
+
