--- a/.binder/Dockerfile
+++ b/.binder/Dockerfile
@@ -1,18 +1,28 @@
-# STEP 1 — Replace .binder/Dockerfile with this EXACT content
+# .binder/Dockerfile — Binder-compatible Manim CE image that shows your repo files
 
 FROM manimcommunity/manim:stable
 
+# 1) Become root and install Jupyter bits
 USER root
-ENV PATH="/manim/.local/bin:${PATH}"
-RUN python3 -m pip install --no-cache-dir notebook jupyterlab ipywidgets
+RUN python3 -m pip install --no-cache-dir --upgrade pip \
+ && python3 -m pip install --no-cache-dir notebook jupyterlab ipywidgets
 
-# Binder mounts your repo at /home/jovyan; ensure it exists and is owned by the runtime user
-RUN mkdir -p /home/jovyan && chown -R manim:manim /home/jovyan
+# 2) Create Binder’s expected user and home, then set permissions
+ARG NB_USER=jovyan
+ARG NB_UID=1000
+ENV HOME=/home/${NB_USER}
+RUN useradd -m -s /bin/bash -u ${NB_UID} ${NB_USER}
 
-# Make the repo mount the working directory so files show up in the file browser
-WORKDIR /home/jovyan
+# 3) Make Binder’s working directory; Binder will mount your repo here
+RUN mkdir -p ${HOME} /home/${NB_USER} \
+ && chown -R ${NB_UID}:${NB_UID} ${HOME}
 
-# Run as the image’s default user
-USER manim
+# 4) Environment for user-local pip scripts
+ENV PATH="${HOME}/.local/bin:${PATH}"
 
-# Do NOT set ENTRYPOINT/CMD
+# 5) Switch to the unprivileged user and set working directory
+USER ${NB_USER}
+WORKDIR ${HOME}
+
+# 6) Do NOT set ENTRYPOINT or CMD; Binder injects its own
+
