--- a/.binder/Dockerfile
+++ b/.binder/Dockerfile
@@ -4,6 +4,11 @@ USER root
 ENV PATH="/manim/.local/bin:${PATH}"
 RUN python3 -m pip install --no-cache-dir notebook jupyterlab ipywidgets
 
-# leave user creation to repo2docker/binder
+# ensure Binder mounts the repo here and it appears in the file browser
+RUN mkdir -p /home/jovyan
+WORKDIR /home/jovyan
+
+# leave the default command for Binder to start Jupyter
+
 
 
