--- a/.binder/Dockerfile
+++ b/.binder/Dockerfile
@@ -1,14 +1,22 @@
+# Step 1 — In your repo, replace .binder/Dockerfile with this EXACT content:
 FROM manimcommunity/manim:stable
 
+# install Jupyter pieces as root
 USER root
-ENV PATH="/manim/.local/bin:${PATH}"
 RUN python3 -m pip install --no-cache-dir notebook jupyterlab ipywidgets
 
-# ensure Binder mounts the repo here and it appears in the file browser
-RUN mkdir -p /home/jovyan
-WORKDIR /home/jovyan
+# copy your repository into the image and set ownership to the existing manimuser
+COPY --chown=manimuser:manimuser . /manim
 
-# leave the default command for Binder to start Jupyter
+# run Binder as the existing non-root user and work from /manim
+USER manimuser
+WORKDIR /manim
+
+# Step 2 — Commit and push these changes to your GitHub repository.
+
+# Step 3 — Relaunch your Binder link (with a cache-buster, e.g. &fresh=1). 
+# You should now see your notebooks in the file browser and be able to open and run them.
+
 
 
 
