--- a/.binder/Dockerfile
+++ b/.binder/Dockerfile
@@ -1,21 +1,29 @@
-# Step 1 — In your repo, replace .binder/Dockerfile with this EXACT content:
 FROM manimcommunity/manim:stable
 
-# install Jupyter pieces as root
+# install system dependencies as root
 USER root
-RUN python3 -m pip install --no-cache-dir notebook jupyterlab ipywidgets
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    texlive-latex-extra \
+    texlive-latex-recommended \
+    texlive-fonts-recommended \
+    texlive-pictures \
+    texlive-xetex \
+    dvipng && \
+    rm -rf /var/lib/apt/lists/*
 
-# copy your repository into the image and set ownership to the existing manimuser
+# install Jupyter, widgets, and MF-Tools plugin
+RUN python3 -m pip install --no-cache-dir \
+    notebook \
+    jupyterlab \
+    ipywidgets \
+    MF-Tools
+
+# copy repo and set ownership
 COPY --chown=manimuser:manimuser . /manim
 
-# run Binder as the existing non-root user and work from /manim
 USER manimuser
 WORKDIR /manim
 
-# Step 2 — Commit and push these changes to your GitHub repository.
-
-# Step 3 — Relaunch your Binder link (with a cache-buster, e.g. &fresh=1). 
-# You should now see your notebooks in the file browser and be able to open and run them.
 
 
 
