--- a/.binder/Dockerfile
+++ b/.binder/Dockerfile
@@ -1,28 +1,31 @@
 FROM manimcommunity/manim:stable
 
-# install system dependencies as root
+# Install TeX components (science and pictures) and other system deps
 USER root
 RUN apt-get update && apt-get install -y --no-install-recommends \
     texlive-latex-extra \
     texlive-latex-recommended \
     texlive-fonts-recommended \
     texlive-pictures \
+    texlive-science \
     texlive-xetex \
     dvipng && \
     rm -rf /var/lib/apt/lists/*
 
-# install Jupyter, widgets, and MF-Tools plugin
+# Install Jupyter components and MF‑Tools
 RUN python3 -m pip install --no-cache-dir \
     notebook \
     jupyterlab \
     ipywidgets \
     MF-Tools
 
-# copy repo and set ownership
+# Copy repository into image and fix ownership
 COPY --chown=manimuser:manimuser . /manim
 
+# Run as unprivileged user in Binder
 USER manimuser
 WORKDIR /manim
+
 
 
 
